--- a/src/sass/partials/cl/_heroes.scss
+++ b/src/sass/partials/cl/_heroes.scss
@@ -29,6 +29,7 @@
     &:focus {
       background: $white;
       color: $link;
+      top: 0;
     }
 
   }
